Display step two items, add new icons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
     <h2>Prejudice182 - Code Institute - Milestone Two</h2>
     <p>Testing new content</p>
 
-    <div class="container-fluid" id="root"></div>
+    <div class="container-fluid" id="root">
+        <div class="row" id="stepOneRow">
+            <div class="col" id="stepOneCol">
+                <h3 class="text-center">Step 1: Craft Cheapest Bracer!</h3>
+            </div>
+        </div>
+
+        <div class="row" id="stepTwoRow">
+            <div class="col" id="stepTwoCol">
+                <h3 class="text-center">Step 2: Craft Cheapest Honorable Bracer!</h3>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap JS Requires -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
