Change to median pricing, style images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
 
         <div class="row" id="stepTwoRow">
             <div class="col" id="stepTwoCol">
-                <h3 class="text-center">Step 2: Craft Cheapest Honorable Bracer!</h3>
+                <h3 class="text-center">Step 2: Scrap Bracers!</h3>
+            </div>
+        </div>
+
+        <div class="row" id="stepThreeRow">
+            <div class="col" id="stepThreeCol">
+                <h3 class="text-center">Step 3: Craft Cheapest Honorable Bracer!</h3>
+            </div>
+        </div>
+
+        <div class="row" id="stepFourRow">
+            <div class="col" id="stepFourCol">
+                <h3 class="text-center">Step 4: Disenchant Bracers!</h3>
             </div>
         </div>
     </div>
