--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- My own styles -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- Wowhead Tooltips -->
-    <script>var whTooltips = {colorLinks: true, iconizeLinks: true, renameLinks: true};</script>
-    <script src="https://wow.zamimg.com/widgets/power.js"></script>
 </head>
 
 <body>
@@ -30,7 +27,7 @@
 
         <div class="row" id="stepTwoRow">
             <div class="col" id="stepTwoCol">
-                <h3 class="text-center">Step 2: Scrap Bracers!</h3>
+                <h3 class="text-center">Step 2: Scrap Green Bracers!</h3>
             </div>
         </div>
 
@@ -42,7 +39,7 @@
 
         <div class="row" id="stepFourRow">
             <div class="col" id="stepFourCol">
-                <h3 class="text-center">Step 4: Disenchant Bracers!</h3>
+                <h3 class="text-center">Step 4: Disenchant Blue and Purple Bracers!</h3>
             </div>
         </div>
     </div>
