--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
         <div class="row" id="stepOneRow">
             <div class="col" id="stepOneCol">
                 <h3 class="text-center">Step 1: Craft Cheapest Bracer!</h3>
+                <div class="card-deck" id="stepOneCardDeck"></div>
             </div>
         </div>
 
-        <div class="row" id="stepTwoRow">
-            <div class="col" id="stepTwoCol">
+        <div class="row justify-content-center" id="stepTwoRow">
+            <div class="col-4" id="stepTwoCol">
                 <h3 class="text-center">Step 2: Scrap Green Bracers!</h3>
             </div>
         </div>
@@ -34,12 +35,14 @@
         <div class="row" id="stepThreeRow">
             <div class="col" id="stepThreeCol">
                 <h3 class="text-center">Step 3: Craft Cheapest Honorable Bracer!</h3>
+                <div class="card-deck" id="stepThreeCardDeck"></div>
             </div>
         </div>
 
         <div class="row" id="stepFourRow">
             <div class="col" id="stepFourCol">
                 <h3 class="text-center">Step 4: Disenchant Blue and Purple Bracers!</h3>
+                <div class="card-deck" id="stepFourCardDeck"></div>
             </div>
         </div>
     </div>
