--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
     <p>Testing new content</p>
 
     <div class="container-fluid" id="root">
-        <div class="row" id="stepOneRow">
+        <div class="row py-3" id="stepOneRow">
             <div class="col" id="stepOneCol">
                 <h3 class="text-center">Step 1: Craft Cheapest Bracer!</h3>
-                <div class="card-deck" id="stepOneCardDeck"></div>
+                <div class="row" id="stepOneInnerRow"></div>
             </div>
         </div>
 
-        <div class="row justify-content-center" id="stepTwoRow">
-            <div class="col-4" id="stepTwoCol">
-                <h3 class="text-center">Step 2: Scrap Green Bracers!</h3>
+        <div class="row justify-content-center pb-3" id="stepTwoRow">
+            <div class="col-xl-4" id="stepTwoCol">
+                <h3 class="text-center pb-3">Step 2: Scrap Green Bracers!</h3>
             </div>
         </div>
 
-        <div class="row" id="stepThreeRow">
+        <div class="row py-3" id="stepThreeRow">
             <div class="col" id="stepThreeCol">
                 <h3 class="text-center">Step 3: Craft Cheapest Honorable Bracer!</h3>
-                <div class="card-deck" id="stepThreeCardDeck"></div>
+                <div class="row" id="stepThreeInnerRow"></div>
             </div>
         </div>
 
         <div class="row" id="stepFourRow">
             <div class="col" id="stepFourCol">
                 <h3 class="text-center">Step 4: Disenchant Blue and Purple Bracers!</h3>
-                <div class="card-deck" id="stepFourCardDeck"></div>
+                <div class="row" id="stepFourInnerRow"></div>
             </div>
         </div>
     </div>
