--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
 <body>
 
-    <h1>Blizzard API Test</h1>
-    <h2>Prejudice182 - Code Institute - Milestone Two</h2>
-    <p>Testing new content</p>
+    <h1 class="text-center">World of Warcraft Bracer Shuffle</h1>
 
     <div class="container-fluid" id="root">
         <div class="row py-3" id="stepOneRow">
