Add content to modal

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     How many bracers would you like to make?
                     <input type="number" min="1" max="9999" name="numBracers" id="numBracers" value="1" required>
                     <input type="submit" value="Calculate!">
-                    <div class="results"></div>
+                    <div class="container-fluid" id="resultsContainer"></div>
                 </div>
             </div>
         </div>
