--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
-    <a class="d-inline-block h3" id="helpButton" data-toggle="modal" data-target="#helpModal"><i
-            class="far fa-question-circle"></i></a>
+<body> 
+    <!-- Help modal toggle button -->
+    <a class="d-inline-block h3" id="helpButton" data-toggle="modal" data-target="#helpModal">
+        <i class="far fa-question-circle"></i>
+    </a>
     <h1 class="text-center">World of Warcraft Bracer Shuffle</h1>
     <div class="text-center">
-        <button type="button" class="btn btn-info calculate" data-toggle="modal" data-target="#calculateModal">Calculate!</button>
+        <!-- Calculation modal toggle button -->
+        <button type="button" class="btn btn-info calculate" data-toggle="modal"
+            data-target="#calculateModal">Calculate!</button>
     </div>
     <!-- Calculation modal-->
     <div class="modal fade text-center" id="calculateModal" tabindex="-1" role="dialog"
@@ -58,22 +62,20 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="text-justify pb-4"><img src="./assets/img/scrapping.jpg" alt="Scrapping">This page is for players of World of Warcraft. In game, there are professions where users can
-                        craft items and sell them on to other players.
-                        Instead of selling them on, crafters can proceed to break down these items by "scrapping", which
-                        sometimes rewards a material needed for higher
-                        end crafts. This enables players to make the higher end items, which in turn break down via
-                        aother process known as "disenchanting" to more valuable
-                        materials then were initially used.
+                    <div class="text-justify pb-4"><img src="./assets/img/scrapping.jpg" alt="Scrapping">This page is
+                        for players of World of Warcraft. In game, there are professions where users can craft items and
+                        sell them on to other players. Instead of selling them on, crafters can proceed to break down
+                        these items by "scrapping", which sometimes rewards a material needed for higher end crafts.
+                        This enables players to make the higher end items, which in turn break down via another process
+                        known as "disenchanting" to more valuable materials then were initially used.
                     </div>
                     <img src="./assets/img/disenchant.jpg" alt="Disenchant">
-                    <div class="text-justify">On first load, the page will display the prices and crafting costs of all items used in the
-                        entire process. A gold border will be placed around the items
-                        with the cheapest crafting cost. Players are free to disregard this information if they don't
-                        have the required profession. If they wish for more in-depth
-                        breakdown, they can click the "Calculate!" button, where they can input how many bracers they
-                        would like to craft, and get an estimated total cost, and a
-                        summary of the estimated returns from scrapping and disenchanting the bracers.
+                    <div class="text-justify">On first load, the page will display the prices and crafting costs of all
+                        items used in the entire process. A gold border will be placed around the items with the
+                        cheapest crafting cost. Players are free to disregard this information if they don't have the
+                        required profession. If they wish for more in-depth breakdown, they can click the "Calculate!"
+                        button, where they can input how many bracers they would like to craft, and get an estimated
+                        total cost, and a summary of the estimated returns from scrapping and disenchanting the bracers.
                     </div>
                 </div>
             </div>
@@ -81,6 +83,7 @@
     </div>
 
     <div class="container-fluid" id="root">
+        <!-- Step One Row and Col initialization -->
         <div class="row py-2" id="stepOneRow">
             <div class="col" id="stepOneCol">
                 <h3 class="text-center">Step 1: Craft Cheapest Bracer!</h3>
@@ -88,12 +91,14 @@
             </div>
         </div>
 
+        <!-- Step Two Row and Col initialization -->
         <div class="row justify-content-center pb-3" id="stepTwoRow">
             <div class="col-xl-4" id="stepTwoCol">
                 <h3 class="text-center pb-2">Step 2: Scrap Green Bracers!</h3>
             </div>
         </div>
 
+        <!-- Step Three Row and Col initialization -->
         <div class="row py-2" id="stepThreeRow">
             <div class="col" id="stepThreeCol">
                 <h3 class="text-center">Step 3: Craft Cheapest Honorable Bracer!</h3>
@@ -101,6 +106,7 @@
             </div>
         </div>
 
+        <!-- Step Four Row and Col initialization -->
         <div class="row" id="stepFourRow">
             <div class="col" id="stepFourCol">
                 <h3 class="text-center">Step 4: Disenchant Blue and Purple Bracers!</h3>
