Make final changes before submission

--- a/index.html
+++ b/index.html
@@ -82,38 +82,38 @@
         </div>
     </div>
 
-    <div class="container-fluid" id="root">
+    <main class="container-fluid" id="root">
         <!-- Step One Row and Col initialization -->
-        <div class="row py-2" id="stepOneRow">
+        <section class="row py-2" id="stepOneRow">
             <div class="col" id="stepOneCol">
                 <h3 class="text-center">Step 1: Craft Cheapest Bracer!</h3>
                 <div class="row" id="stepOneInnerRow"></div>
             </div>
-        </div>
+        </section>
 
         <!-- Step Two Row and Col initialization -->
-        <div class="row justify-content-center pb-3" id="stepTwoRow">
+        <section class="row justify-content-center pb-3" id="stepTwoRow">
             <div class="col-xl-4" id="stepTwoCol">
                 <h3 class="text-center pb-2">Step 2: Scrap Green Bracers!</h3>
             </div>
-        </div>
+        </section>
 
         <!-- Step Three Row and Col initialization -->
-        <div class="row py-2" id="stepThreeRow">
+        <section class="row py-2" id="stepThreeRow">
             <div class="col" id="stepThreeCol">
                 <h3 class="text-center">Step 3: Craft Cheapest Honorable Bracer!</h3>
                 <div class="row" id="stepThreeInnerRow"></div>
             </div>
-        </div>
+        </section>
 
         <!-- Step Four Row and Col initialization -->
-        <div class="row" id="stepFourRow">
+        <section class="row" id="stepFourRow">
             <div class="col" id="stepFourCol">
                 <h3 class="text-center">Step 4: Disenchant Blue and Purple Bracers!</h3>
                 <div class="row" id="stepFourInnerRow"></div>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
 
     <!-- Bootstrap JS Requires -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
