Make final changes before submission

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </script>
 
     <!-- My own code -->
-    <script type="text/javascript" src="./assets/js/blizzard.js"></script>
+    <script src="./assets/js/blizzard.js"></script>
 </body>
 
 </html>
